Code - Layout style

--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -206,8 +206,12 @@ date.time: H:i:s
 "searchType_1": "Words"
 
 # SettingsFormType.php
-"settingsFormType_1": "No"
-"settingsFormType_2": "Yes"
+"settingsFormType_1": "Type 1"
+"settingsFormType_2": "Type 2"
+"settingsFormType_3": "Type 3"
+"settingsFormType_4": "Type 4"
+"settingsFormType_5": "No"
+"settingsFormType_6": "Yes"
 
 # UserFormType.php
 "userFormType_1": "Select"
@@ -499,25 +503,26 @@ date.time: H:i:s
 # settings.html.twig
 "settings_1": "Settings form"
 "settings_2": "Style"
-"settings_3": "Email admin"
-"settings_4": "Template"
+"settings_3": "Template"
+"settings_4": "Template style"
 "settings_5": "Language"
 "settings_6": "Language manage"
 "settings_7": "Security"
-"settings_8": "Active"
-"settings_9": "Maintenance roles"
-"settings_10": "Https"
-"settings_11": "Registration user confirm admin"
-"settings_12": "Login attempt time"
-"settings_13": "Login attempt count"
-"settings_14": "Captcha"
-"settings_15": "Paypal"
-"settings_16": "PayPal sandbox"
-"settings_17": "PayPal business"
-"settings_18": "PayPal currency code"
-"settings_19": "PayPal credit amount"
-"settings_20": "Payment"
-"settings_21": "Credits"
+"settings_8": "Email admin"
+"settings_9": "Active"
+"settings_10": "Maintenance roles"
+"settings_11": "Https"
+"settings_12": "Registration user confirm admin"
+"settings_13": "Login attempt time"
+"settings_14": "Login attempt count"
+"settings_15": "Captcha"
+"settings_16": "Paypal"
+"settings_17": "PayPal sandbox"
+"settings_18": "PayPal business"
+"settings_19": "PayPal currency code"
+"settings_20": "PayPal credit amount"
+"settings_21": "Payment"
+"settings_22": "Credits"
 
 # user_creation.html.twig
 "user_creation_1": "User creation form"
