--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -34,12 +34,14 @@ date.time: H:i:s
 # ---
 # Classes
 
+# Utility.php
+"class_utility_1": "Session time is over, please login again."
+
 # UtilityPrivate.php
-"class_utilityPrivate_1": "Session time is over, please login again."
-"class_utilityPrivate_2": "Old password doesn't match!"
-"class_utilityPrivate_3": "New password and New confirm password doesn't match!"
-"class_utilityPrivate_4": "Password and Confirm password doesn't match!"
-"class_utilityPrivate_5": "Select parent:"
+"class_utilityPrivate_1": "Old password doesn't match!"
+"class_utilityPrivate_2": "New password and New confirm password doesn't match!"
+"class_utilityPrivate_3": "Password and Confirm password doesn't match!"
+"class_utilityPrivate_4": "Select parent:"
 
 # Upload.php
 "class_upload_1": "Error max size, limit is: "
