--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -36,13 +36,11 @@ date.time: H:i:s
 
 # Utility.php
 "class_utility_1": "Session time is over, please login again."
-
-# UebusaitoUtility.php
-"class_uebusaitoUtility_1": "Old password doesn't match!"
-"class_uebusaitoUtility_2": "New password and New confirm password doesn't match!"
-"class_uebusaitoUtility_3": "Password and Confirm password doesn't match!"
-"class_uebusaitoUtility_4": "Select parent:"
-"class_uebusaitoUtility_5": "Select"
+"class_utility_2": "Old password doesn't match!"
+"class_utility_3": "New password and New confirm password doesn't match!"
+"class_utility_4": "Password and Confirm password doesn't match!"
+"class_utility_5": "Select parent:"
+"class_utility_6": "Select"
 
 # Upload.php
 "class_upload_1": "Error max size, limit is: "
