Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -297,7 +297,7 @@ date.time: H:i:s
 "index_2": "UNDER MAINTENANCE"
 "index_3": "Warning!"
 "index_4": "Ok"
-"index_5": "Abort"
+"index_5": "Close"
 "index_6": "Connection error, please reload the page."
 "index_7": "Copyright © 2018 - Reinvent software."
 "index_8": "All rights reserved."
