--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
@@ -297,7 +297,7 @@ date.time: H:i:s
 "index_2": "IN MANUTENZIONE"
 "index_3": "Attenzione!"
 "index_4": "Ok"
-"index_5": "Annullare"
+"index_5": "Chiudere"
 "index_6": "Errire connessione, perfavore ricarica la pagina."
 "index_7": "Copyright © 2018 - Reinvent software."
 "index_8": "Tutti i diritti riservati."
