--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -235,6 +235,7 @@ date.time: H:i:s
 "userFormType_3": "Woman"
 "userFormType_4": "No"
 "userFormType_5": "Yes"
+"userFormType_6": "Gender"
 
 # UserSelectionFormType.php
 "userSelectionFormType_1": "Select"
@@ -626,7 +627,7 @@ date.time: H:i:s
 "authentication_5": "Logout"
 "authentication_6": "Username"
 "authentication_7": "Password"
-"authentication_8": "Remember me"
+"authentication_8": "Remember"
 "authentication_9": "Login"
 "authentication_10": "Registration"
 "authentication_11": "Forgot password?"
