Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -626,7 +626,7 @@ date.time: H:i:s
 "authentication_5": "Logout"
 "authentication_6": "Username"
 "authentication_7": "Password"
-"authentication_8": "Remember"
+"authentication_8": "Remember me"
 "authentication_9": "Login"
 "authentication_10": "Registration"
 "authentication_11": "Forgot password?"
