--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
@@ -626,7 +626,7 @@ date.time: H:i:s
 "authentication_5": "Esci"
 "authentication_6": "Username"
 "authentication_7": "Password"
-"authentication_8": "Ricorda"
+"authentication_8": "Ricordami"
 "authentication_9": "Entra"
 "authentication_10": "Registrazione"
 "authentication_11": "Password dimenticata?"
